# dw2069

./: .dockerignore  .env.example  Dockerfile  README.md  README_DEVELOPMENT.md  STRUCTURE.md  Tsaiwimon_FRD.md  docker-compose.yml  manage.py  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  setup.bat  setup.cfg  setup.sh
apps/core/: admin.py  apps.py  models.py  serializers.py
apps/core/migrations/: 0001_initial.py
apps/ecommerce/: __init__.py  admin.py  apps.py  models.py  sales_urls.py  sales_views.py  serializers.py  tests.py  urls.py  views.py
apps/ecommerce/management/commands/: generate_fake_sales.py  populate_products.py
apps/ecommerce/migrations/: 0001_initial.py  0002_productvariant_alter_order_options_and_more.py
apps/logistics/: __init__.py  admin.py  apps.py  models.py  serializers.py  tests.py  transport_urls.py  urls.py  views.py
apps/logistics/migrations/: 0001_initial.py
apps/marketing/: __init__.py  admin.py  apps.py  marketing_urls.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/marketing/migrations/: 0001_initial.py
apps/warehouse/: __init__.py  admin.py  apps.py  inventory_urls.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/warehouse/migrations/: 0001_initial.py
static/css/: sales.css
static/js/: sales.js
templates/: base.html
templates/logistics/: transport_dashboard.html
templates/marketing/: marketing_dashboard.html
templates/sales/: cart.html  home.html  product_detail.html  products.html
templates/warehouse/: inventory_dashboard.html
tsaiwimon/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
